--- a/app/views/messages/_main_bar.html.erb
+++ b/app/views/messages/_main_bar.html.erb
@@ -1,6 +1,56 @@
 <div class="main-header">
+  <div class="left-header">
+    <div class="current-room">
+      room_sample1
+    </div>
+  </div>
+  <div class="right-header">
+    <div class="room-delete-btn">
+      <a href="#">チャットを終了する</a>
+    </div>
+  </div>
 </div>
 <div class="main-messages">
+  <div class="message">
+    <div class="top-message">
+      <div class="sender">
+        Tom
+      </div>
+      <div class="time-stamp">
+        2020/3/31(Wed) 12:34:00
+      </div>
+    </div>
+    <div class="bottom-message">
+      <div class="text-photo">
+        おはよう
+      </div>
+    </div>
+  </div>
+
+  <div class="message">
+    <div class="top-message">
+      <div class="sender">
+        Tom
+      </div>
+      <div class="time-stamp">
+        2020/3/31(Wed) 12:34:00
+      </div>
+    </div>
+    <div class="bottom-message">
+      <div class="text-photo">
+        おはよう
+      </div>
+    </div>
+  </div>
+
 </div>
 <div class="main-form">
+  <div class="form-input">
+    <input class="form-message" placeholder= "type a message">
+    <label class="form-image">
+      <span class="image-file">画像</span>
+      <input type="file" class="hidden">
+    </label>
+  </div>
+  <input class="form-submit" type="submit" value="送信">
 </div>
